; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_task_get_proc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_task_get_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.task = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.proc* (%struct.task*)* @mac_task_get_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.proc* @mac_task_get_proc(%struct.task* %0) #0 {
  %2 = alloca %struct.proc*, align 8
  %3 = alloca %struct.task*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.proc*, align 8
  store %struct.task* %0, %struct.task** %3, align 8
  %6 = load %struct.task*, %struct.task** %3, align 8
  %7 = call %struct.task* (...) @current_task()
  %8 = icmp eq %struct.task* %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call %struct.proc* (...) @proc_self()
  store %struct.proc* %10, %struct.proc** %2, align 8
  br label %29

11:                                               ; preds = %1
  %12 = load %struct.task*, %struct.task** %3, align 8
  %13 = call i32 @task_pid(%struct.task* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call %struct.proc* @proc_find(i32 %14)
  store %struct.proc* %15, %struct.proc** %5, align 8
  %16 = load %struct.proc*, %struct.proc** %5, align 8
  %17 = icmp ne %struct.proc* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %11
  %19 = load %struct.proc*, %struct.proc** %5, align 8
  %20 = call %struct.task* @proc_task(%struct.proc* %19)
  %21 = load %struct.task*, %struct.task** %3, align 8
  %22 = icmp eq %struct.task* %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load %struct.proc*, %struct.proc** %5, align 8
  store %struct.proc* %24, %struct.proc** %2, align 8
  br label %29

25:                                               ; preds = %18
  %26 = load %struct.proc*, %struct.proc** %5, align 8
  %27 = call i32 @proc_rele(%struct.proc* %26)
  br label %28

28:                                               ; preds = %25, %11
  store %struct.proc* null, %struct.proc** %2, align 8
  br label %29

29:                                               ; preds = %28, %23, %9
  %30 = load %struct.proc*, %struct.proc** %2, align 8
  ret %struct.proc* %30
}

declare dso_local %struct.task* @current_task(...) #1

declare dso_local %struct.proc* @proc_self(...) #1

declare dso_local i32 @task_pid(%struct.task*) #1

declare dso_local %struct.proc* @proc_find(i32) #1

declare dso_local %struct.task* @proc_task(%struct.proc*) #1

declare dso_local i32 @proc_rele(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
